# hexarch-example

./: .gitignore  Cargo.toml  LICENSE
migrations/: 20240113083736_create_authors.up.sql
src/: config.rs  database.rs  http.rs  lib.rs  main.rs  model.rs  models.rs  repositories.rs  sqlite.rs  store.rs
src/http/: handler.rs  handlers.rs
